--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -323,16 +323,18 @@ Elements of \textsc{pvm} state are each assumed to remain unchanged by the host-
     \using c &= |\set{\build{p \in \Nclamp{a}{b}}{\memory_\ram¬access\subb{p} = \mathrm{W}}}| \\
     % The total gas cost, based on the number of pages that will become writable after this call.
     \using g &= 100 + \max(0, \registers_7 - a - c) \cdot 10 \\
-    \tup{\execst', \gascounter', \registers'_7, (\memory'_\ram¬access)\interval{a}{\registers_7}} &\equiv \begin{cases}
+    % Clamp so that ranges make sense.
+    \using h &= \max(a, \registers_7) \\
+    \tup{\execst', \gascounter', \registers'_7, (\memory'_\ram¬access)\interval{a}{h}} &\equiv \begin{cases}
       % Not enough gas to even cover the constant cost of the call, regardless of whether it's a no-op or not.
-      \tup{\oog, \gascounter, \registers_7, (\memory_\ram¬access)\interval{a}{\registers_7}} &\when \gascounter < 100 \\
+      \tup{\oog, \gascounter, \registers_7, (\memory_\ram¬access)\interval{a}{h}} &\when \gascounter < 100 \\
       % Expand the accessible RW data region, and return the new page count.
-      \tup{\continue, \gascounter - g, \max(a + c, \registers_7), \mathrm{W}} &\otherwhen \registers_7 \leq b \land \gascounter \ge g \\
+      \tup{\continue, \gascounter - g, \max(a + c, h), \sq{\mathrm{W}, \dots, \mathrm{W}}} &\otherwhen h \leq b \land \gascounter \ge g \\
       % Otherwise just return the current writable page count.
       %
       % This will also trigger when the user doesn't have enough gas to request as many pages
       % as they want, in which case they will be able to gracefully handle this situation.
-      \tup{\continue, \gascounter - 100, a + c, (\memory_\ram¬access)\interval{a}{\registers_7}} &\otherwise \\
+      \tup{\continue, \gascounter - 100, a + c, (\memory_\ram¬access)\interval{a}{h}} &\otherwise \\
     \end{cases}
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
